@@ -1,6 +1,7 @@
 # Head
 
 - Fix a bug in range checking in the C version of the LARGE function
+- Fix bug in keeping of table references when setting to keep all named references
 
 # 0.3.17 - 2015 May 14
 
